# la-bench

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml
announcements/: 2025-10-22_participation_rules.md  2025-11-14_2_submission_form.md  2025-11-14_test_phase_start.md  2025-11-21_2_file_size_limit.md  2025-11-21_submission_deadline.md  2025-11-23_test_phase_end.md  2025-12-20_results_announcement.md
data/: json2jsonl.py  json2jsonl_input.py
data/example/: example.jsonl
data/example/samples/: sample_1.json  sample_2.json  sample_3.json  sample_4.json  sample_5.json
data/private_test/: private_test.jsonl  private_test_input.jsonl
data/private_test/samples_input/: private_test_1.json  private_test_10.json  private_test_2.json  private_test_3.json  private_test_4.json  private_test_5.json  private_test_6.json  private_test_7.json  private_test_8.json  private_test_9.json
data/public_test/: public_test.jsonl
data/public_test/samples/: public_test_1.json  public_test_10.json  public_test_2.json  public_test_3.json  public_test_4.json  public_test_5.json  public_test_6.json  public_test_7.json  public_test_8.json  public_test_9.json
docs/: _config.yml  index.html  leaderboard.html  participation_rules_notice.md  submission-guide.md
notebooks/: Evaluation.ipynb  baseline.ipynb
