[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "la-bench"
version = "0.0.0"
description = "Local baseline environment for LA Bench with uv"
authors = [{ name = "LA Bench" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "pydantic>=2.0",
  "ipykernel>=6.29",
  "openai>=1.107.1",
]

[project.optional-dependencies]
extras = [
  # Optional: nice to have locally
  "jupyterlab>=4.0",
]

[tool.setuptools]
packages = []
